@@ -3,6 +3,7 @@ Revision history for mojolicious-plugin-linkedcontent
 0.08	Mon Jul 11 15:30:00 2016
 		Support for registered js and css with dependences as require.js (Emiliano Bruni)
 		Extensions .js and .css can be omitted
+		Support for css for different media using { href => '...', media => '....' }
 
 0.07    Fri Jan 15 15:56:32 2015
         Support Mojolicious 5.0+
